--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,21 @@ ul {
   width: 18px;
 }
 
+.modal-aplication {
+  display: flex;
+  left: auto;
+  right: auto;
+}
+
+.modal > .modal-aplication {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  justify-content: center;
+}
+
 /* Main */
 
 .work,
