--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,39 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   justify-content: center;
+  margin-bottom: 12px;
+}
+
+.aplication-form {
+  display: flex;
+flex-direction: column;
+margin-left: 40px;
+margin-right: 40px;
+}
+
+.form-name,
+.form-tel,
+.form-mail,
+.form-comment {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  font-weight: 400;
+font-size: 12px;
+line-height: 1.66;
+color: #757575;
+
+}
+
+.form-checkbox {
+  display: flex;
+}
+
+.form-fiend {
+  display: inline-block;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
 }
 
 /* Main */
