--- a/css/styles.css
+++ b/css/styles.css
@@ -252,9 +252,10 @@ ul {
 
 .aplication-form {
   display: flex;
-flex-direction: column;
-margin-left: 40px;
-margin-right: 40px;
+  flex-direction: column;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 30px;
 }
 
 .form-name,
@@ -265,21 +266,59 @@ margin-right: 40px;
   flex-direction: column;
   margin-bottom: 10px;
   font-weight: 400;
-font-size: 12px;
-line-height: 1.66;
-color: #757575;
+  font-size: 12px;
+  line-height: 1.66;
+  color: #757575;
+  margin-bottom: 0;
+}
 
+.form-comment {
+  margin-bottom: 20px;
 }
 
 .form-checkbox {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-fiend {
   display: inline-block;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.comment-form {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding-top: 12px;
+  padding-left: 16px;
+}
+
+.conditions {
+  margin-left: 9px;
+  font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+color: #757575;
+
+}
+
+.btn-submit {
+  display: block;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  background-color: #2196f3;
+  color: #ffffff;
+  border-radius: 4px;
+  border-color: transparent;
 }
 
 /* Main */
