--- a/css/styles.css
+++ b/css/styles.css
@@ -300,10 +300,9 @@ ul {
 .conditions {
   margin-left: 9px;
   font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-color: #757575;
-
+  font-size: 14px;
+  line-height: 1.71;
+  color: #757575;
 }
 
 .btn-submit {
@@ -319,6 +318,14 @@ color: #757575;
   color: #ffffff;
   border-radius: 4px;
   border-color: transparent;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.btn-submit:hover,
+.btn-submit:focus {
+  background-color: #188ce8;
 }
 
 /* Main */
