--- a/css/styles.css
+++ b/css/styles.css
@@ -843,6 +843,7 @@ footer {
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
+  outline: transparent;
 }
 
 .email-form {
@@ -851,7 +852,11 @@ footer {
   border-radius: 4px;
 }
 
+
 .subscribe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 200px;
   height: 50px;
   background: var(--focus-color-text);
@@ -860,6 +865,10 @@ footer {
   color: #ffffff;
   cursor: pointer;
   margin-left: 12px;
+}
+
+.btn-icon-subscribe {
+ margin-left: 10px;
 }
 
 .subscribe-btn:hover {
