--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,6 @@ ul {
 
 .modal {
   position: absolute;
-  height: 581px;
   width: 528px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -314,6 +313,7 @@ ul {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+  margin-bottom: 40px;
   background-color: #2196f3;
   color: #ffffff;
   border-radius: 4px;
