добавляет маржин между формами в модалке

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,7 @@ ul {
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  margin-bottom: 10px;
 }
 
 .comment-form {
