--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,7 @@ ul {
 .form-tel,
 .form-mail,
 .form-comment {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -269,6 +270,12 @@ ul {
   line-height: 1.66;
   color: #757575;
   margin-bottom: 0;
+}
+
+.icon-form {
+  position: absolute;
+  top: 30px;
+  left: 12px;
 }
 
 .form-comment {
@@ -287,6 +294,7 @@ ul {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 10px;
+  padding-left: 38px;
 }
 
 .comment-form {
