--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,12 @@ ul {
   width: 18px;
 }
 
+.close-modal-btn:hover,
+.close-modal-btn:focus{
+  fill: #2196F3;
+  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-aplication {
   display: flex;
   left: auto;
@@ -289,6 +295,7 @@ ul {
   position: absolute;
   top: 30px;
   left: 12px;
+  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-comment {
@@ -308,6 +315,7 @@ ul {
   border-radius: 4px;
   margin-bottom: 10px;
   padding-left: 38px;
+  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment-form {
@@ -316,6 +324,7 @@ ul {
   resize: none;
   padding-top: 12px;
   padding-left: 16px;
+  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .conditions {
