--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,7 @@ ul {
   margin-bottom: 10px;
   padding-left: 38px;
   transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 .comment-form {
@@ -325,6 +326,7 @@ ul {
   padding-top: 12px;
   padding-left: 16px;
   transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 .conditions {
